--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-# Visual Studio 2015 user specific files
-.vs/
+# Visual Studio Code user specific files
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
 
 # Compiled Object files
 *.slo
